Footer: z-index mobile fixed

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -643,6 +643,9 @@ footer {
       display: none;
     }
   }
+  @media all and (max-width: 600px) {
+    z-index: -1!important;
+  }
 }
 
 #pictures {
